recipes-core/commonFiles/ital-common-files/etc/iptables-save
# Generated by iptables-save v1.6.1 on Fri Jan 17 10:20:53 2020
*raw
:PREROUTING ACCEPT [7643:663453]
:OUTPUT ACCEPT [7527:4144943]
COMMIT
# Completed on Fri Jan 17 10:20:53 2020
# Generated by iptables-save v1.6.1 on Fri Jan 17 10:20:53 2020
*nat
:PREROUTING ACCEPT [8:1509]
:INPUT ACCEPT [8:1509]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
-A PREROUTING -i tun0 -p tcp -m tcp --dport 7500 -j DNAT --to-destination 192.168.1.12:7500
COMMIT
# Completed on Fri Jan 17 10:20:53 2020
# Generated by iptables-save v1.6.1 on Fri Jan 17 10:20:53 2020
*mangle
:PREROUTING ACCEPT [7643:663453]
:INPUT ACCEPT [7637:662751]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7527:4144943]
:POSTROUTING ACCEPT [7566:4153856]
COMMIT
# Completed on Fri Jan 17 10:20:53 2020
# Generated by iptables-save v1.6.1 on Fri Jan 17 10:20:53 2020
*filter
:INPUT ACCEPT [562:131318]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [517:51127]
-A INPUT -p tcp -m tcp --tcp-flags RST RST -m limit --limit 2/sec --limit-burst 2 -j ACCEPT
-A INPUT -m recent --rcheck --seconds 86400 --name portscan --mask 255.255.255.255 --rsource -j DROP
-A INPUT -m recent --remove --name portscan --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 139 -m recent --set --name portscan --mask 255.255.255.255 --rsource -j LOG --log-prefix "portscan:"
-A INPUT -p tcp -m tcp --dport 139 -m recent --set --name portscan --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 17 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 13 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 14 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 12/min -j ACCEPT
-A INPUT -p tcp -m tcp --dport 111 -j DROP
-A FORWARD -m recent --rcheck --seconds 86400 --name portscan --mask 255.255.255.255 --rsource -j DROP
-A FORWARD -m recent --remove --name portscan --mask 255.255.255.255 --rsource
-A FORWARD -p tcp -m tcp --dport 139 -m recent --set --name portscan --mask 255.255.255.255 --rsource -j LOG --log-prefix "portscan:"
-A FORWARD -p tcp -m tcp --dport 139 -m recent --set --name portscan --mask 255.255.255.255 --rsource -j DROP
COMMIT
# Completed on Fri Jan 17 10:20:53 2020
